aggiunto query condition occupation controller